name:                julienchurch 
version:             0.4.0.0
synopsis:            A site 
description:         Literally a site 
homepage:            https://github.com/agrafix/funblog
license:             Apache-2.0
license-file:        LICENSE
author:              Julien Church 
maintainer:          Julien Church 
copyright:           (c) 2014 - 2015 Julien Church 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.10.2
extra-source-files:
    README.md
    static/css/main.css

executable run 
  main-is:             Main.hs 
  other-modules:
                       Model.CoreTypes
                       Model.ResponseTypes
                       Web.Actions.User
                       Web.Blog
                       Web.Forms.Common
                       Web.Forms.Login
                       Web.Forms.Post
                       Web.Forms.Register
                       Web.Utils
                       Web.Views.Site
  build-depends:
                       Spock >=0.9,
                       Spock-digestive >=0.2,
                       aeson >=0.8,
                       base >= 4 && < 5,
                       base16-bytestring >=0.1,
                       blaze-bootstrap >=0.1,
                       blaze-html >=0.7,
                       shakespeare >= 2.0.5,
                       bytestring >=0.10,
                       configurator >=0.3,
                       cryptohash >=0.11,
                       digestive-bootstrap >=0.1,
                       digestive-functors >=0.7,
                       http-types >=0.8,
                       hvect >=0.3,
                       monad-logger >=0.3,
                       mtl >=2.2,
                       persistent >=2.1,
                       persistent-sqlite >=2.1,
                       persistent-template >=2.1,
                       random,
                       resourcet,
                       stm,
                       text >=1.2,
                       time >=1.4,
                       unordered-containers,
                       wai-middleware-static >=0.6,
                       word8,
                       filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/agrafix/funblog
